--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,12 @@
       <artifactId>mybatis</artifactId>
       <version>3.5.10</version>
     </dependency>
+    <dependency>
+      <groupId>org.codehaus.mojo</groupId>
+      <artifactId>exec-maven-plugin</artifactId>
+      <version>3.1.0</version>
+      <type>maven-plugin</type>
+    </dependency>
   </dependencies>
 
   <build>
